# vindemitor

./: .gitignore  .pre-commit-config.yaml  OLD-CHANGELOG.md  README.md  cliff.toml  pyproject.toml
vindemitor/: __main__.py  example.vindemitor.toml
vindemitor/commands/: cfg.py  dl.py  env.py  kv.py  search.py  serve.py  util.py  wvd.py
vindemitor/core/: __main__.py  binaries.py  cacher.py  commands.py  config.py  console.py  constants.py  cookies.py  credential.py  drm_manager.py  post_processor.py  service.py  services.py  session.py  track_selector.py  utilities.py  vault.py  vaults.py
vindemitor/core/downloaders/: aria2c.py  curl_impersonate.py  requests.py
vindemitor/core/drm/: __init__.py  clearkey.py  widevine.py
vindemitor/core/manifests/: dash.py  hls.py
vindemitor/core/proxies/: basic.py  hola.py  nordvpn.py
vindemitor/core/titles/: episode.py  movie.py  song.py  title.py
vindemitor/core/tracks/: audio.py  chapters.py  subtitle.py  track.py  tracks.py  video.py
vindemitor/core/utils/: click_types.py  subprocess.py  webvtt.py  xml.py
vindemitor/vaults/: API.py  MySQL.py  SQLite.py  __init__.py
