[project]
name = "vindemitor"
version = "0.1.0"
description = "Modular Movie, TV, and Music Archival Software."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "GPL-3.0-only"
authors = [
  { name = "Shivelight", email = "shivelight@tuta.io" },
  { name = "rlaphoenix", email = "rlaphoenix@pm.me" },
]
keywords = [
  "downloader",
  "drm",
  "python",
  "widevine",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Topic :: Multimedia :: Video",
  "Topic :: Security :: Cryptography",
]
dependencies = [
  "Brotli>=1.1.0,<2",
  "Unidecode>=1.3.8,<2",
  "chardet>=5.2.0,<6",
  "click>=8.2.1,<9",
  "construct>=2.8.8,<3",
  "crccheck>=1.3.1,<2",
  "curl-cffi>=0.12.0,<1",
  "jsonpickle>=3.0.4,<4",
  "httpx>=0.28.1",
  "langcodes>=3.5.0,<4",
  "lxml>=6.0.0,<7",
  "pproxy>=2.7.9,<3",
  "protobuf>=4.25.3,<5",
  "pycaption>=2.2.6,<3",
  "pycryptodomex>=3.20.0,<4",
  "pyjwt>=2.8.0,<3",
  "pymediainfo>=6.1.0,<7",
  "pymp4>=1.4.0,<2",
  "pymysql>=1.1.2,<2",
  "pywidevine[serve]>=1.8.0,<2",
  "requests[socks]>=2.32.5,<3",
  "rich>=13.7.1,<14",
  "rlaphoenix.m3u8>=3.4.0,<4",
  "sortedcontainers>=2.4.0,<3",
  "subtitle-filter>=1.5.0,<2",
  "urllib3>=2.5.0,<3",
  "tomlkit>=0.13.3",
  "platformdirs>=4.4.0",
  "niquests>=3.15.2",
]

[project.urls]
Changelog = "https://github.com/Shivelight/vindemitor/blob/master/CHANGELOG.md"
Discussions = "https://github.com/Shivelight/vindemitor/discussions"
Homepage = "https://github.com/Shivelight/vindemitor"
Issues = "https://github.com/Shivelight/vindemitor/issues"
Repository = "https://github.com/Shivelight/vindemitor"

[project.scripts]
vindemitor = "vindemitor.core.__main__:main"

[dependency-groups]
dev = [
  "isort>=6.0.1,<7",
  "mypy-protobuf>=3.6.0,<4",
  "mypy>=1.17.0,<2",
  "prek>=0.2.1",
  "ruff~=0.13.0",
  "types-PyMySQL>=1.1.0.1,<2",
  "types-m3u8>=6.0.0.20250708",
  "types-protobuf>=4.24.0.20240408,<5",
  "types-requests>=2.32.4.20250913",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
  "vindemitor",
  "CHANGELOG.md",
  "README.md",
  "LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["vindemitor"]

[tool.isort]
line_length = 118

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
follow_imports = "normal"
ignore_missing_imports = true
no_implicit_optional = true
explicit_package_bases = true
allow_redefinition_new = true
local_partial_types = true

[tool.basedpyright]
typeCheckingMode = "standard"  # TODO: promote to "strict" / "recommended" when have time

[tool.ruff]
force-exclude = true
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "W"]
